Fix version selector overlap responsiveness

--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -11,6 +11,11 @@
 		font-size: 14px !important;
 	}
 }
+@media only screen and (max-width: 504px) {
+	.selectorwrapper {
+		margin-top: 60px !important;
+	}
+}
 @media only screen and (max-width: 462px) {
 	.modwrapper {
 		margin-top: 80px !important;
